force-app/main/default/objects/copado__User_Story__c/fields/Peer_Review__c.field-meta.xml
<CustomField>
    <fullName>Peer_Review__c</fullName>
    <description>Peer review field whit value of the result of the Quality Clouds Peer Review</description>
    <label>Peer Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error Request</fullName>
                <default>true</default>
                <label>Error Request</label>
            </value>
            <value>
                <fullName>Peer Review Submited</fullName>
            </value>
            <value>
                <fullName>Peer Review Rejected</fullName>
            </value>
            <value>
                <fullName>Peer Review Approved</fullName>
            </value>
            <value>
                <fullName>No Peer Review Submited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>