force-app/main/default/objects/copado__User_Story__c/fields/QC_Issue_Count__c.field-meta.xml
<CustomField>
    <fullName>QC_Issue_Count__c</fullName>
    <label>QC Issue Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>