force-app/main/default/objects/copado__User_Story__c/fields/Quality_Gates_Result__c.field-meta.xml
<CustomField>
    <fullName>Quality_Gates_Result__c</fullName>
    <label>Quality Gates Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PASSED</fullName>
            </value>
            <value>
                <fullName>NOT PASSED</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>