force-app/main/default/objects/copado__User_Story__c/recordTypes/copado__Investigation.recordType-meta.xml
<RecordType>
    <fullName>copado__Investigation</fullName>
    <active>true</active>
    <label>Investigation</label>
</RecordType>